<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/characterLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:visibility="gone">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/atla_characters"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="36sp"
            tools:visibility="visible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="46dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:textColor="@color/error"
            android:textSize="24sp"
            tools:text="Service unavailable"
            tools:visibility="gone" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loadingProgressBar"
            style="@style/Widget.Material3.CircularProgressIndicator"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:indeterminate="true"
            app:indicatorColor="@color/secondary_container"
            app:indicatorSize="64dp"
            app:trackCornerRadius="10dp"
            app:trackThickness="6dp"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/loadingDataTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/loading_character"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:visibility="visible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:visibility="visible" />

    </LinearLayout>

    <ImageView
        android:id="@+id/favoriteImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="8dp"
        android:importantForAccessibility="no"
        android:src="@drawable/not_favorite"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="46dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/title_text_color"
            android:textSize="32sp"
            tools:text="Mako" />

        <ImageView
            android:id="@+id/characterImageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:importantForAccessibility="no"
            android:scaleType="fitXY"
            android:src="@drawable/last_airbender_and_legend_of_korra" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_category"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/allies"
            android:textAlignment="center"
            android:textColor="@color/title_text_color"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/alliesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_text"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start|center"
            android:maxLines="2"
            android:text="@string/allies"
            android:textColor="@color/black"
            android:textSize="22sp"
            tools:text="Bolin, Korra, Asami" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_category"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/enemies"
            android:textAlignment="center"
            android:textColor="@color/title_text_color"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/enemiesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_text"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start|center"
            android:maxLines="2"
            android:text="@string/allies"
            android:textColor="@color/black"
            android:textSize="22sp"
            tools:text="Hiroshi Sato, Amon, Tarrlok, Kuvira" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_category"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/affiliation"
            android:textAlignment="center"
            android:textColor="@color/title_text_color"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/affiliationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_text"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start|center"
            android:maxLines="3"
            android:text="@string/allies"
            android:textColor="@color/black"
            android:textSize="22sp"
            tools:text="Fire Ferrets (formerly) Republic City Police Republic City power plant (formerly)" />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actionButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="46dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins_medium"
        android:paddingVertical="0dp"
        android:textSize="24sp"
        app:strokeColor="@color/black"
        tools:visibility="visible" />

</LinearLayout>